--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups-raft</artifactId>
-            <version>0.4.2.Final</version>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>io.undertow</groupId>
